--- a/todolist-front/less/todolist.less
+++ b/todolist-front/less/todolist.less
@@ -211,6 +211,32 @@ body {
     .todo-mixin;
 }
 
+#dialog {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    width: 200px;
+    height: 100px;
+    margin: auto;
+    border: solid 1px #000000;
+    background: #ffffff;
+    padding: 10px;
+
+    > div {
+        
+    }
+
+    > button {
+        position: absolute;
+        left: 85px;
+        bottom: 10px;
+        width: 50px;
+        cursor: pointer;
+    }
+}
+
 #overlay {
     position: fixed;
     top: 0;
