--- a/todolist-front/less/todolist.less
+++ b/todolist-front/less/todolist.less
@@ -1,3 +1,5 @@
+@charset "utf-8";
+
 body {
     font-family: -apple-system, BlinkMacSystemFont, "Helvetica Neue", YuGothic, "ヒラギノ角ゴ ProN W3", Hiragino Kaku Gothic ProN, Arial, "メイリオ", Meiryo, sans-serif;
     background: #d0d0d0;
