--- a/todolist-back/src/main/resources/templates/todolist.html
+++ b/todolist-back/src/main/resources/templates/todolist.html
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=750">
